--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/Vagrantfile
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/Vagrantfile
@@ -13,8 +13,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "opensuse/Leap-15.2.x86_64"
-  # config.vm.box_version = "15.2.31.199"
-  config.vm.box_version = "15.2.31.566"
+  #config.vm.box_version = "15.2.31.289"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -25,18 +24,21 @@ Vagrant.configure("2") do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # NOTE: This will enable public access to the opened port
-  config.vm.network "forwarded_port", guest: 80, host: 8080
-  config.vm.network "forwarded_port", guest: 9090, host: 9090
-  config.vm.network "forwarded_port", guest: 8080, host: 8080
+  #config.vm.network "forwarded_port", guest: 80, host: 8080
+  #config.vm.network "forwarded_port", guest: 9090, host: 9090
+  #config.vm.network "forwarded_port", guest: 8080, host: 8080
   #config.vm.network "forwarded_port", guest: 8888, host: 8080 
-  config.vm.network "forwarded_port", guest: 9090, host: 8888
-  config.vm.network "forwarded_port", guest: 3000, host: 3000
-  config.vm.network "forwarded_port", guest: 3030, host: 3030
-  config.vm.network "forwarded_port", guest: 8080, host: 8080
-  config.vm.network "forwarded_port", guest: 16686, host: 8088
+  #config.vm.network "forwarded_port", guest: 9090, host: 8888
+  #config.vm.network "forwarded_port", guest: 3000, host: 3000
+  #config.vm.network "forwarded_port", guest: 3030, host: 3030
+  #config.vm.network "forwarded_port", guest: 8081, host: 8081
+  #config.vm.network "forwarded_port", guest: 8082, host: 8082
+  #config.vm.network "forwarded_port", guest: 8083, host: 8083
+  #config.vm.network "forwarded_port", guest: 16686, host: 8088
   #config.vm.network "forwarded_port", guest: 8000, host: 8888
   config.vm.network "forwarded_port", guest: 8888, host: 8888
   config.vm.network "forwarded_port", guest: 8000, host: 8000
+  config.vm.network "forwarded_port", guest: 6443, host: 6443 # API Access
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
@@ -79,13 +81,12 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+     sudo zypper --non-interactive install apparmor-parser
+  SHELL
 
   args = []
       config.vm.provision "k3s shell script", type: "shell",
-          path: "scripts/k3s.sh",
+          path: "k3s.sh",
           args: args
 end
