--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
@@ -1,20 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-app
+  name: backend
+  annotations:
+    sidecar.jaegertracing.io/inject: "true"
+  #labels:
+  #  app: backend
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: backend
+      release: prometheus
   template:
     metadata:
       labels:
         app: backend
+        release: prometheus
     spec:
       containers:
       - name: backend
-        image: ghcr.io/thejaysmith/backend:v1
+        image: chrisking99/metrics-dashboard-backend
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
 ---
@@ -22,10 +29,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  labels:
+    app: backend
+    release: prometheus
 spec:
   selector:
     app: backend
+    release: prometheus
   ports:
-    - port: 80
+    - name: backend
+      port: 8081
       targetPort: 8080
   type: LoadBalancer
